[package]
name = "p2p-file-sharing"
version = "0.1.0"
authors = ["Alexandr Zhukov <pridett2012@gmail.com>, Serhii Kocherha <serj911kocherga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
serde = { version = "1.0", features = ["derive"] }
