[package]
name = "p2p-file-sharing"
version = "0.1.0"
authors = ["Alexandr Zhukov <pridett2012@gmail.com>, Serhii Kocherha <serj911kocherga@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.2"

[target.'cfg(unix)'.dependencies]
machine-ip = "0.2"
