[package]
name = "p2p-file-sharing"
version = "0.1.0"
authors = ["Zhukov"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "0.2.4", features = ["full"] }

num_cpus = "1.0"

p2p-file-sharing-enum-commands = "0.2.3"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.2"

[target.'cfg(unix)'.dependencies]
machine-ip = "0.1"
